<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >
    
    <include 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        layout="@layout/title"
        
        
        />
    
     <RelativeLayout
        android:id="@+id/rl_friends"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
     
        android:layout_marginTop="20dp"
        android:background="@drawable/setting_item_selector" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/setting_friends"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/right" />
    </RelativeLayout>
    
    
     <RelativeLayout
        android:id="@+id/rl_wifi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
     
        android:layout_marginTop="20dp"
        android:background="@drawable/setting_item_selector" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/setting_wifi"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:id="@+id/set_wifi"
          android:checked="true"  
        android:textOff=""  
        android:textOn="" 
            android:background="@drawable/setting_chekbox" />
    </RelativeLayout>
    
 
    <RelativeLayout
        android:id="@+id/rl_tuisong"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      android:layout_marginTop="1dp"
     
        android:background="@drawable/setting_item_selector" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/setting_tui"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
             android:id="@+id/set_tui"
                android:text=""
                 android:checked="true"  
        android:textOff=""  
        android:textOn="" 
            android:background="@drawable/setting_chekbox" />
    </RelativeLayout>
    
    
    
     <RelativeLayout
        android:id="@+id/rl_version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    
        android:layout_marginTop="20dp"
        android:background="@drawable/setting_item_selector" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20sp"
            android:paddingRight="20dp"
            android:text="@string/setting_version"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rl_isNewest"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:text="@string/setting_new"
            android:textColor="#80ffffff"
            android:textSize="13sp" />
    </RelativeLayout>
    
    
     <RelativeLayout
        android:id="@+id/rl_clear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       
        android:layout_marginTop="1dp"
        android:background="@drawable/setting_item_selector" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/setting_clear"
            android:textColor="#ffffff"
           
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/clear_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
             android:visibility="invisible"
            android:layout_marginRight="15dp"
            android:background="@drawable/right" />

        <TextView
            android:id="@+id/cache_size"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toLeftOf="@id/clear_tag"
            android:gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:text="0KB"
            android:textColor="#80ffffff"
            android:textSize="13sp" />
    </RelativeLayout>
    
    
    <RelativeLayout
        android:id="@+id/rl_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       
        android:layout_marginTop="20dp"
        android:background="@drawable/setting_item_selector" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/setting_about"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/right" />
    </RelativeLayout>
    
    
    <RelativeLayout
        android:id="@+id/rl_feedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      
        android:layout_marginTop="1dp"
        android:background="@drawable/setting_item_selector" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/setting_feedback"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/right" />
    </RelativeLayout>
    
    
    
    
    
    
    

    
    
    
    
    

</LinearLayout>
